--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -5,6 +5,6 @@
 <h3>The Fight Club</h3>
     <p>The storyline is mind boggling.</p>
 <h3>The Shutter Island</h3>
-    <p>"What would be worse to live as a monster or die as a hero."</p>
+    <p>"What would be worse to live as a monster or to die as a hero."</p>
 <h3>Inception</h3>
     <p>The unconscious world and its wonders.</p>
